# PEA-PWR

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Algorithms/: BranchAndBound.cpp  BranchAndBound.h  BranchAndBoundNew.cpp  BranchAndBoundNew.h  BruteForce.cpp  BruteForce.h  DynamicProgramming.cpp  DynamicProgramming.h
Algorithms/Utils/: BranchAndBoundNode.cpp  BranchAndBoundNode.h  List.cpp  List.h  Node.cpp  Node.h
FileUtils/: DataFileUtility.cpp  DataFileUtility.h
Flow/: ActionResult.h  AppController.cpp  AppController.h  ConsoleView.cpp  ConsoleView.h  LatestAlgorithmRun.h
Matrix/: Matrix.cpp  Matrix.h
MeasureTime/: Timer.cpp  Timer.h
RandomDataGenerator/: RandomDataGenerator.cpp  RandomDataGenerator.h
Resources/: test.txt  test2.txt
Resources/Wyniki/: BF-10.csv  BruteForce-11.csv  BruteForce-12.csv  BruteForce-13.csv  BruteForce-7.csv  BruteForce-8.csv  BruteForce-9.csv
Tests/: AutomaticTests.cpp  AutomaticTests.h
